5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1575_1330.log
== TEST (2019-03-28 11:19:24) 
-- CODE:
var1 = 250 / 6
print(var1)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:21:03) 
-- CODE:
var1 = 250 / 6
print(round(var1)
-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:21:36) 
-- CODE:
var1 = 250 / 6
print(round(var1))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:28) 
-- CODE:
var1 = 250 / 6
print(round(var1, 4))
-- OUTPUT:
41.6667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:36) 
-- CODE:
var1 = 250 / 6
print(round(var1, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:22:51) 
-- CODE:
var1 = 250 / 6
print(round(var1, 2))
-- EXECUTION TIME:
0.179618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
